<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/graph">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:id="@+id/icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:text="@string/sientes_hoy"
                android:id="@+id/question"
                />

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:id="@+id/options"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_verydissatisfied"
                    android:background="@android:color/transparent"
                    android:id="@+id/verySadButton"
                    />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_dissatisfied"
                    android:background="@android:color/transparent"
                    android:id="@+id/sadButton"
                    />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="10dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_neutral"
                    android:background="@android:color/transparent"
                    android:id="@+id/neutralButton"
                    />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_satisfied"
                    android:background="@android:color/transparent"
                    android:id="@+id/happyButton"
                    />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="10dp"
                    android:src="@drawable/ic_verysatisfied"
                    android:background="@android:color/transparent"
                    android:id="@+id/veryHappyButton"
                    />

            </LinearLayout>


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/guardar"
                android:id="@+id/guardarButton"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                />


            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:id="@+id/bargraphs"
                android:columnCount="2">

                <TextView

                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/muy_feliz"

                    />

                <View android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphVeryHappy"/>



                <TextView

                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/feliz"
                    android:layout_marginRight="15dp"

                    />

                <View android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphHappy"/>


                <TextView

                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/neutral"
                    android:layout_marginRight="15dp"

                    />

                <View android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphNeutral"/>


                <TextView

                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/triste"

                    />

                <View android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphSad"/>


                <TextView

                    android:layout_width="wrap_content"
                    android:textAlignment="center"
                    android:layout_height="wrap_content"
                    android:text="@string/muy_triste"

                    />

                <View android:layout_height="20dp"
                    android:layout_width="250dp"
                    android:id="@+id/graphVerySad"/>

            </GridLayout>

        </LinearLayout>

    </ScrollView>

